# Location-Assessment-Reviewer-Portal

./: .gitignore  .pre-commit-config.yaml  API_QUERY_DESIGN.md  DATABASE_DESIGN.md  PHASE2_ALGORITHM.md  PHASE2_ASSUMPTIONS.md  PRODUCTION_ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/solution/: 01_full_solution_documentation.md  02_final_delivery_summary.md  README.md
docs/solution/appendix/: api_playground_guide.md  system_diagrams.md  technology_decisions.md
docs/solution/domains/: part1_etl_pipeline.md  part2_database_architecture.md  part3_api_query_layer.md  part4_production_architecture.md
reviewer_site/: README.md  app.js  index.html  styles.css
src/api/: app.py
src/config/: settings.py
src/domain/: models.py
src/ingestion/: csv_reader.py
src/pipeline/: batch_phase1.py  cli.py  compare.py  phase1.py
src/quality/: __init__.py  validator.py
src/storage/: artifact_store.py  manifest_store.py  visit_store.py
src/transformation/: __init__.py  grouping.py
src/utils/: checksum.py  generate_similar_pings.py  logging.py  validation_runner.py
tests/: test_api_layer.py  test_ingestion.py  test_phase3_storage.py  test_phase4_analytics.py  test_phase4_export.py  test_pipeline_integration.py  test_quality.py  test_transformation.py
tests/fixtures/: pings_missing_required.csv  pings_no_accuracy.csv  pings_valid.csv
